# agent-skills

./: .curator_state  .gitignore  .usage.json  README.md  UPSTREAM.md
.github/workflows/: auto-merge.yml  smoke-tests.yml
.jules/: sentinel.md
autonomous-ai-agents/hermes-agent/: SKILL.md
autonomous-ai-agents/hermes-agent/references/: pre-upgrade-backup.md  session-expiry-write-protection.md
creative/structured-digest/: SKILL.md
devops/secret-store/: AGENTS.md  SKILL.md
devops/secret-store/scripts/: secrets.py
github/github/: SKILL.md
github/github-auth/: SKILL.md
github/github-auto-merge-workflow/: SKILL.md
github/github-auto-merge-workflow/references/: agent-skills-recovery-may2026.md
github/nightly-upstream-sync/: SKILL.md
media/ft-reader/: .env.sample  AGENTS.md  GEMINI.md  README.md  SKILL.md  pyproject.toml
media/ft-reader/schemas/: article.schema.json  audio.schema.json  headlines.schema.json  myft.schema.json
media/ft-reader/scripts/: set_cookie.py
media/ft-reader/src/ft_reader/: __init__.py  article.py  audio.py  cache.py  cli.py  client.py  headlines.py  myft.py
media/ft-reader/tests/: conftest.py  test_agent_entrypoints.py  test_audio.py  test_cache.py  test_client.py  test_contract.py  test_dotenv.py  test_headlines.py  test_myft.py  test_set_cookie.py
media/ft-reader/tests/fixtures/: article.json  myft.json  structure.json
media/news-reader-base/: .gitignore  pyproject.toml
media/news-reader-base/src/news_reader_base/: __init__.py  cache.py  cli.py  client.py  dotenv.py  errors.py
media/news-reader-base/tests/: test_cache.py  test_cli.py  test_client.py  test_dotenv.py
media/nyt-reader/: .env.sample  .gitignore  AGENTS.md  GEMINI.md  README.md  SKILL.md  pyproject.toml
media/nyt-reader/schemas/: article.schema.json  audio.schema.json  headlines.schema.json  saved.schema.json
media/nyt-reader/scripts/: set_cookie.py
media/nyt-reader/src/nyt_reader/: __init__.py  article.py  audio.py  cache.py  cli.py  client.py  headlines.py  saved.py
media/nyt-reader/tests/: conftest.py  test_agent_entrypoints.py  test_article.py  test_audio.py  test_cache.py  test_client.py  test_contract.py  test_headlines.py  test_set_cookie.py
media/nyt-reader/tests/fixtures/: article_page.html  headlines.json
media/translate/: README.md  SKILL.md  pyproject.toml
media/translate/src/translate/: __init__.py  cache.py  cli.py  walker.py
media/translate/src/translate/backends/: __init__.py  noop.py  ollama.py
media/translate/tests/: test_cli_noop.py  test_walker.py
media/waytoagi-reader/: AGENTS.md  GEMINI.md  LICENSING.md  README.md  SKILL.md  pyproject.toml
media/waytoagi-reader/schemas/: update_log.schema.json
media/waytoagi-reader/src/waytoagi_reader/: __init__.py  archive.py  blocks.py  bootstrap.py  cache.py  cli.py  client.py  update_log.py
media/waytoagi-reader/tests/: test_blocks.py  test_cache.py  test_schema.py
media/wsj-reader/tests/: test_agent_entrypoints.py  test_client.py
media/youtube-content/: SKILL.md
media/youtube-content/references/: output-formats.md
media/youtube-content/scripts/: fetch_transcript.py
media/youtube-transcript-download/: SKILL.md
research/arxiv/: SKILL.md
research/arxiv/references/: shown_papers.json
research/car_tracker/: SKILL.md
research/car_tracker/scripts/: publish_deals.py
research/hn-brief-digest/: SKILL.md
research/jargon/: SKILL.md
research/jargon-notify/: SKILL.md
research/msgvault_mcp/: SKILL.md
research/superhuman_mcp/: SKILL.md
research/unified-digest-themes/: SKILL.md
smart-home/awtrix-smart-display/: .gitignore  SKILL.md  config.json.sample  pyproject.toml
smart-home/awtrix-smart-display/src/awtrix_display/: cli.py  client.py  config.py
smart-home/awtrix-smart-display/tests/: test_cli.py  test_client.py  test_config.py
social-media/twitterapi-io/: SKILL.md
social-media/x-digest/: SKILL.md
social-media/xurl-cli/: SKILL.md
software-development/skill-versioning/: SKILL.md
(+16 files in other folders)
