[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyt-reader"
version = "0.1.0"
description = "Read NYTimes articles, headlines, and narrated MP3s using a user's authenticated session. JSON output for agent consumption."
license = {text = "Apache-2.0"}
authors = [{name = "Nick Lange"}]
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=7", "responses>=0.24", "jsonschema>=4"]

[project.scripts]
nyt = "nyt_reader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
