[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awtrix-smart-display"
version = "1.0.0"
description = "Control and submit animations, notifications, and settings to Awtrix 3 displays."
license = {text = "Apache-2.0"}
authors = [{name = "Nick Lange"}]
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
awtrix = "awtrix_display.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
